--- a/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-08 11:54+0000\n"
+"POT-Creation-Date: 2026-01-23 07:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -241,6 +241,11 @@ msgstr "مكتب اليونيسف"
 
 msgid "Contingency PD?"
 msgstr "وثيقة برامج طوارئ ؟"
+
+#, fuzzy
+#| msgid "Humanitarian"
+msgid "Humanitarian SPD"
+msgstr "إنساني"
 
 msgid "Cluster"
 msgstr "تَجَمَّع"
