--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-23 08:15+0000\n"
+"POT-Creation-Date: 2026-01-23 16:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -622,20 +622,6 @@ msgstr "Orçamento detalhado do plano de trabalho"
 msgid "Supply Contribution (Planned)"
 msgstr "Contribuição de supimentos (planejada)"
 
-msgid "Open selection"
-msgstr "Seleção aberta"
-
-msgid "Direct selection"
-msgstr "Seleção direta"
-
-msgid ""
-"Select how the partner was selected in UNPP (Open selection or Direct "
-"selection)."
-msgstr "Selecione como o parceiro foi selecionado no UNPP (Seleção aberta ou Seleção direta)."
-
-msgid "Partner Selection Modality"
-msgstr "Modalidade de Seleção do Parceiro"
-
 msgid "Name"
 msgstr "Nome"
 
@@ -971,6 +957,22 @@ msgstr "Humanitário"
 
 msgid "Date first sent to Partner"
 msgstr "Data do primeiro envio ao parceiro"
+
+msgid "Open selection"
+msgstr "Seleção aberta"
+
+msgid "Direct selection"
+msgstr "Seleção direta"
+
+msgid "Partner Selection Modality"
+msgstr "Modalidade de Seleção do Parceiro"
+
+msgid ""
+"Select how the partner was selected in UNPP (Open selection or Direct "
+"selection)."
+msgstr ""
+"Selecione como o parceiro foi selecionado no UNPP (Seleção aberta ou Seleção "
+"direta)."
 
 msgid "Context"
 msgstr "Contexto"
